<?xml version="1.0"?>
<package format="2">

  <name>isi_hes_msgs</name>
  <version>0.0.1</version>
  <description>
     IS Instruments ROS message for interacting with HES
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://www.is-instruments.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>

